# bhr8fc2-mujoco

./: CMakeLists.txt  README.md  bitbot_fc2.xml  bitbot_hhfc.xml  inference_net.hpp  main.cpp  test.sh  user_func.cpp
.cache/clangd/index/: LLog.hpp.77E9F273DDA73E05.idx  ZenBuffer.hpp.73F4E659CBF3D4E4.idx  inference_net.hpp.F7AD8C1E7DE441BB.idx  leeMatrix.c.5B74881A1ABBAB65.idx  leeMatrix.h.D81319A6BED34A4F.idx  main.cpp.9F895812ACDD751F.idx  main.cpp.DC3F5FAD7B7E2960.idx  parallel_ankle.hpp.136BAB78F8B08EC1.idx  user_func.cpp.19082DE4A07FAC31.idx  user_func.cpp.B5B9B1BC944237D0.idx  user_func.h.C8157506F185FC7C.idx  user_func.h.FB8E129F1D6FFC28.idx
checkpoint/: policy_1.pt
include/: parallel_ankle.hpp
models/urdf/: bhr8fc2mc.urdf  bhr8fc2mc_add_pos_limit.urdf  hhfc.urdf
models/xml/: bhr8fc2mc.xml  bhr8fc2mc_add_pos_limit.xml  hhfc.xml
